Added logout and redirects users to granted pages.

--- a/config/application.ini
+++ b/config/application.ini
@@ -2,5 +2,5 @@
 ; Application configuration file
 ;
 
-base_url = http://localhost:8888/
+base_url = http://mnl243win:8888/
 main_template = default
