--- a/ui/Templates/default0.template
+++ b/ui/Templates/default0.template
@@ -24,7 +24,7 @@
 
 	<link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
     <script src="assets/3rd/js/function.js" type="text/javascript"></script>
-
+	
 	<!-- Load local jQuery -->
     <script src="assets/3rd/remodal/libs/jquery-loader.js"></script>
 
@@ -45,7 +45,7 @@
     </style>
   </head>
 
-  <body>
+  <body class="admin-dashboard">
 
     <div class="container">
         <?php echo $_VIEW; ?>
